--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,3 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 /* @import "tailwindcss"; */
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.animate-spin {
+  animation: spin 1s linear infinite;
+}
